--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,3 @@
-# Create a virtual environment
-python -m venv venv
-
-# Activate the virtual environment
-# On Windows
-venv\Scripts\activate
-# On macOS/Linux
-source venv/bin/activate
-
-# Install the project dependencies
-poetry install  # Or pip install <dependencies> if you're using pip
-
-# Generate the requirements.txt file
-pip freeze > requirements.txt
+flask==2.0.1
+requests==2.25.1
+google-cloud-dialogflow==3.0.0
