--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-flask==2.0.1
-requests==2.25.1
-google-cloud-dialogflow==3.0.0
+git add requirements.txt
+git commit -m "Update google-cloud-dialogflow version"
+git push origin main
