--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git add requirements.txt
-git commit -m "Update google-cloud-dialogflow version"
-git push origin main
+flask==2.0.1
+requests==2.25.1
+google-cloud-dialogflow==2.39.0
